--- a/Latex/Local-TME-EMT.bib
+++ b/Latex/Local-TME-EMT.bib
@@ -12518,8 +12518,7 @@ MRREVIEWER = {Krishnarjun\ Krishnamoorthy},
 }
 @article {Lee*21a,
     AUTHOR = {Lee, Ethan S.},
-     TITLE = {On an explicit zero-free region for the {D}edekind
-              zeta-function},
+     TITLE = {On an explicit zero-free region for the {D}edekind zeta-function},
    JOURNAL = {J. Number Theory},
   FJOURNAL = {Journal of Number Theory},
     VOLUME = {224},
@@ -12529,6 +12528,54 @@ MRREVIEWER = {Krishnarjun\ Krishnamoorthy},
    MRCLASS = {11R42 (11M26)},
   MRNUMBER = {4244156},
        DOI = {10.1016/j.jnt.2020.12.015},
+}
+@article {Garcia-Lee*22,
+    AUTHOR = {Garcia, Stephan R. and Lee, Ethan S.},
+     TITLE = {Unconditional explicit {M}ertens' theorems for number fields and {D}edekind zeta residue bounds},
+   JOURNAL = {Ramanujan J.},
+  FJOURNAL = {Ramanujan Journal. An International Journal Devoted to the
+              Areas of Mathematics Influenced by Ramanujan},
+    VOLUME = {57},
+      YEAR = {2022},
+    NUMBER = {3},
+     PAGES = {1169--1191},
+      ISSN = {1382-4090,1572-9303},
+   MRCLASS = {11N32 (11N05 11N13 11R42)},
+  MRNUMBER = {4382184},
+MRREVIEWER = {Angel\ V.\ Kumchev},
+       DOI = {10.1007/s11139-021-00435-6},
+       URL = {https://doi.org/10.1007/s11139-021-00435-6},
+}
+@article {Garcia-Lee*22a,
+    AUTHOR = {Garcia, Stephan R. and Lee, Ethan S.},
+     TITLE = {Explicit estimates for {A}rtin {$L$}-functions: {D}uke's short-sum theorem and {D}edekind zeta residues},
+   JOURNAL = {J. Number Theory},
+  FJOURNAL = {Journal of Number Theory},
+    VOLUME = {238},
+      YEAR = {2022},
+     PAGES = {920--943},
+      ISSN = {0022-314X,1096-1658},
+   MRCLASS = {11R42 (11M06 11S40)},
+  MRNUMBER = {4430124},
+MRREVIEWER = {Timothy\ Lee\ Gillespie},
+       DOI = {10.1016/j.jnt.2021.10.007},
+       URL = {https://doi.org/10.1016/j.jnt.2021.10.007},
+}
+@article {Garcia-Lee-Suh-Yu*22,
+    AUTHOR = {Garcia, Stephan R. and Lee, Ethan S. and Suh, Josh and Yu, Jiahui},
+     TITLE = {An effective analytic formula for the number of distinct irreducible factors of a polynomial},
+   JOURNAL = {J. Aust. Math. Soc.},
+  FJOURNAL = {Journal of the Australian Mathematical Society},
+    VOLUME = {113},
+      YEAR = {2022},
+    NUMBER = {3},
+     PAGES = {339--356},
+      ISSN = {1446-7887,1446-8107},
+   MRCLASS = {11C08 (11A41 12E05)},
+  MRNUMBER = {4507696},
+MRREVIEWER = {Abhishek\ Jha},
+       DOI = {10.1017/S1446788721000227},
+       URL = {https://doi.org/10.1017/S1446788721000227},
 }
 	
 @article {Kadiri-Ng-Wong*19,
