--- a/Latex/Art18.tex
+++ b/Latex/Art18.tex
@@ -155,11 +155,27 @@ $$
 The exceptional zero, if it exists, is simple and real.
 \end{thm}
 
+This is improved in \cite{Lee*21a} into:
+
+\par 
+\begin{thm}{Theorem (2021)}
+
+Let $K$ be a number field of degree $n$ over $\mathbb{Q}$ and of
+discriminant $d_K$ such that $|d_K| \ge 2$. The associated Dedekind
+zeta-function $\zeta_K$ has no zeros in the region
+$$
+\sigma\ge 1-\frac{1}{12.2411\log|d_K|+n(9.5347\log|t|+0.0501)+2.2692}, |t|\ge1 
+$$
+and if $d_K$ is sufficiently large, then there is at most one zero in the region
+$$
+\sigma\ge 1-\frac{1}{12.4343\log|d_K|}, |t|< 1.
+$$
+The exceptional zero, if it exists, is simple and real.
+\end{thm}
+
 See
 \cite{Ahn-Kwon*14}
 for a result for Hecke $L$-series.
-
-In
 
 In
 \cite{Louboutin*17},
