--- a/Latex/Art18.tex
+++ b/Latex/Art18.tex
@@ -230,7 +230,7 @@ $$
 
 
   
-\begin{flushright}\small\sl{}   Last updated on July 21th, 2023, by Olivier Ramar\'e
+\begin{flushright}\small\sl{}   Last updated on January 15th, 2023, by Ethan Lee
  \end{flushright}
 
 
