--- a/Latex/Art18.tex
+++ b/Latex/Art18.tex
@@ -214,7 +214,7 @@ $$
 
 
   
-\begin{flushright}\small\sl{}   Last updated on July 21th, 2023, by Olivier Ramar\'e
+\begin{flushright}\small\sl{}   Last updated on February 6th, 2024, by Etahn Lee;
  \end{flushright}
 
 
