--- a/Biblio/biblio.tex
+++ b/Biblio/biblio.tex
@@ -131,10 +131,14 @@
 \nocite{Lee*22}
 \nocite{Debaene*19}
 \nocite{Gun-Ramare-Sivaraman*22b}
+\nocite{Louboutin*00}
+\nocite{Garcia-Lee*22}
+\nocite{Garcia-Lee*22}
 \nocite{Kadiri-Ng*12}
 \nocite{Trudgian*14-1}
 \nocite{Hasanalizade-Shen-Wong*21}
 \nocite{Kadiri*12}
+\nocite{Lee*21a}
 \nocite{Ahn-Kwon*14}
 \nocite{Louboutin*17}
 \nocite{Louboutin*15b}
