--- a/Biblio/biblio.tex
+++ b/Biblio/biblio.tex
@@ -133,7 +133,7 @@
 \nocite{Gun-Ramare-Sivaraman*22b}
 \nocite{Louboutin*00}
 \nocite{Garcia-Lee*22}
-\nocite{Garcia-Lee*22}
+\nocite{Garcia-Lee*22b}
 \nocite{Kadiri-Ng*12}
 \nocite{Trudgian*14-1}
 \nocite{Hasanalizade-Shen-Wong*21}
