--- a/Latex/Art18.tex
+++ b/Latex/Art18.tex
@@ -110,6 +110,7 @@ Dedekind zeta function $\zeta_K(s)$ at $s=1$ is denoted
 $\kappa_K$. Unconditional bounds for the residue of the Dedekind
 zeta-function at $s=1$ are found in
 \cite{Louboutin*00} and in
+Section~3 of
 \cite{Garcia-Lee*22}.
 \par 
 \begin{thm}{Theorem (2000, 2022)}
@@ -126,15 +127,15 @@ in which $g(n_K)=1$ if $K$ has a normal tower over $\mathbb{Q}$ and
 
 
 If the Generalised Riemann Hypothesis and Dedekind Conjecture are
-true, then stronger bounds are found in
-\cite{Garcia-Lee*22}.
+true, then stronger bounds are found in Corollary 2 of
+\cite{Garcia-Lee*22b}.
 \par 
 \begin{thm}{Theorem (2022)}
 
     Assume that the Generalised Riemann Hypothesis and the Dedekind
     Conjecture are true. If $n_K\geq 2$, then 
 $$
-    \frac{e^{-17.81(n_K -1)}}{\log\log{|\Delta_K|}} \leq \kappa_{\K}
+    \frac{e^{-17.81(n_K -1)}}{\log\log{|\Delta_K|}} \leq \kappa_{K}
     \leq e^{17.81(n_K -1 )} (\log\log{|\Delta_K|})^{n_K-1} . 
 $$
 \end{thm}
