--- a/Latex/Local-TME-EMT.bib
+++ b/Latex/Local-TME-EMT.bib
@@ -5802,7 +5802,38 @@ MRREVIEWER = {Olivier Bordell\`es},
   Publisher                = {London Mathematical Society, London; Cambridge University Press, Cambridge},
   Zbl                      = {1248.11068}
 }
-
+@article {Garcia-Lee*22b,
+    AUTHOR = {Garcia, Stephan Ramon and Lee, Ethan Simpson},
+     TITLE = {Explicit estimates for {A}rtin {$L$}-functions: {D}uke's
+              short-sum theorem and {D}edekind zeta residues},
+   JOURNAL = {J. Number Theory},
+  FJOURNAL = {Journal of Number Theory},
+    VOLUME = {238},
+      YEAR = {2022},
+     PAGES = {920--943},
+      ISSN = {0022-314X,1096-1658},
+   MRCLASS = {11R42 (11M06 11S40)},
+  MRNUMBER = {4430124},
+MRREVIEWER = {Timothy\ Lee\ Gillespie},
+       DOI = {10.1016/j.jnt.2021.10.007},
+}
+@article {Garcia-Lee*22,
+    AUTHOR = {Garcia, Stephan Ramon and Lee, Ethan Simpson},
+     TITLE = {Unconditional explicit {M}ertens' theorems for number fields
+              and {D}edekind zeta residue bounds},
+   JOURNAL = {Ramanujan J.},
+  FJOURNAL = {Ramanujan Journal. An International Journal Devoted to the
+              Areas of Mathematics Influenced by Ramanujan},
+    VOLUME = {57},
+      YEAR = {2022},
+    NUMBER = {3},
+     PAGES = {1169--1191},
+      ISSN = {1382-4090,1572-9303},
+   MRCLASS = {11N32 (11N05 11N13 11R42)},
+  MRNUMBER = {4382184},
+MRREVIEWER = {Angel\ V.\ Kumchev},
+       DOI = {10.1007/s11139-021-00435-6},
+}
 @Article{Cilleruelo-Garaev*11,
   Title                    = {{Concentration of points on two and three dimensional modular hyperbolas and applications.}},
   Author                   = {Javier {Cilleruelo} and Moubariz Z. {Garaev}},
