--- a/Latex/Art18.tex
+++ b/Latex/Art18.tex
@@ -126,7 +126,8 @@ in which $g(n_K)=1$ if $K$ has a normal tower over $\mathbb{Q}$ and
 \end{thm}
 
 
-If the Generalised Riemann Hypothesis and Dedekind Conjecture are
+If the Generalised Riemann Hypothesis and Dedekind Conjecture
+(i.e. $\zeta_K/\zeta$ is entire) are
 true, then stronger bounds are found in Corollary 2 of
 \cite{Garcia-Lee*22b}.
 \par 
