--- a/Latex/Art18.tex
+++ b/Latex/Art18.tex
@@ -110,7 +110,7 @@ Dedekind zeta function $\zeta_K(s)$ at $s=1$ is denoted
 $\kappa_K$. Unconditional bounds for the residue of the Dedekind
 zeta-function at $s=1$ are found in
 \cite{Louboutin*00} and in
-Section~3 of
+Section 3 of
 \cite{Garcia-Lee*22}.
 \par 
 \begin{thm}{Theorem (2000, 2022)}
