--- a/Latex/booklet.tex
+++ b/Latex/booklet.tex
@@ -204,6 +204,7 @@ always denotes a prime variable.
 \part{Analytic Number Theory in Number Fields}
 
 \input{Art18.tex}
+\input{Art20.tex}
 
 \part{Applications}
 
