--- a/Biblio/biblio.tex
+++ b/Biblio/biblio.tex
@@ -79,6 +79,7 @@
 \nocite{Buethe*14}
 \nocite{Ramare*13a}
 \nocite{Siebert*76}
+\nocite{Riesel-Vaughan*83}
 \nocite{Greaves*01}
 \nocite{Nathanson*96-2}
 \nocite{Fan*22}
@@ -268,6 +269,7 @@
 \nocite{Ramare*13d}
 \nocite{Ramare*18-9}
 \nocite{Schoenfeld*69}
+\nocite{Riesel-Vaughan*83}
 \nocite{Berkane-Bordelles-Ramare*11}
 \nocite{Deshouillers-Dress*88}
 \nocite{Mardjanichvili*39}
