--- a/Latex/Art14.tex
+++ b/Latex/Art14.tex
@@ -83,7 +83,60 @@ $$
 \end{thm}
 
 
-\section{ensity estimates }
+This is improved for large values in Lemma 4 of
+\cite{Riesel-Vaughan*83}.
+\par 
+\begin{thm}{Theorem (1983)}
+
+Let $a$ and $b$ be coprime integers with $2|ab$. Then we have, for $x
+\ge e^L$,
+$$
+\sum_{\substack{p\le x,\\ \text{$ap+b$ prime}}}1
+\le \biggl(\frac{16 \omega\, x}{(\log x)(A+\log x)}-100\sqrt{x}\biggr)\prod_{\substack{p|ab,\\ p >
+2}}\frac{p-1}{p-2}
+\qquad \omega=\prod_{p > 2}(1-(p-1)^{-2})
+$$
+and where
+
+  
+  
+    
+      $L$:
+      24
+      25
+      26
+      27
+      28
+      29
+      31
+      34
+      42
+      60
+      690
+    
+    
+      $A$:
+      0
+      1
+      2
+      3
+      4
+      5
+      6
+      7
+      8
+      8.3
+      8.45
+    
+  
+  
+  
+\end{thm}
+
+
+
+
+\section{Density estimates }
 
 
 In Theorem 1, page 52 of
@@ -145,7 +198,7 @@ $$
 
 
   
-\begin{flushright}\small\sl{}   Last updated on July 20th, 2023, by Olivier Ramar\'e
+\begin{flushright}\small\sl{}   Last updated on February 6th, 2024, by Olivier Ramar\'e
  \end{flushright}
 
 
