--- a/Latex/Art10.tex
+++ b/Latex/Art10.tex
@@ -353,7 +353,17 @@ $$
 Though it is somewhat difficult to get, this lemma has been further generalized in Lemma 4.1 of
 \cite{Ramare*10}.
 
+
+
+
+
+
 \section{Estimates of some special functions}
+
+
+
+
+
 
 
 \cite{Cohen-Dress*88} contains the
@@ -436,6 +446,26 @@ of \cite{Schoenfeld*69} for an
 earlier version.
 
 
+\par 
+  Lemma 2 of
+  \cite{Riesel-Vaughan*83}
+  contains the next evaluation.
+  \par 
+\begin{thm}{Theorem (1983)}
+
+	For $y \ge 1$, we have
+	$$
+	\sum_{q\le y}\mu^2(q)\prod_{\substack{p|q\\ p\neq
+	2}}\frac{2}{p-2}
+	=
+	\tfrac14\prod_{p > 2}\frac{(p-1)^2}{p(p-2)}
+	\biggl((\log y)^2-A_3\log y - A_4+\mathcal{O}^*(1088/y^{1/3})\biggr)
+	$$
+	where
+	$A_3=6.023476\cdots$ and $A_4=1.114073\cdots$.
+\end{thm}
+
+  
 
 \par 
 The main result
@@ -506,7 +536,7 @@ we find the next result.
 
   For $x\ge 2$, we have
 $$
-\sum_{n\le x} d_4(n) = C_1x(\log x)^3
+\sum_{n\le x} \tau_4(n) = C_1x(\log x)^3
 + C_2x(\log x)^2
 +C_3x(\log x
 +C_4x
@@ -518,7 +548,7 @@ where the constants $C_1=1/6$, $C_2=2\gamma-1/2$, and $C_3$ and $C_4$
 \end{thm}
 
 They deduce for instance from this that $\sum_{n\le
-x}d_4(n)\le(1/3)x(\log x)^3$ when $x\ge 193$.
+x}\tau_4(n)\le(1/3)x(\log x)^3$ when $x\ge 193$.
 
 In the same paper, these authors also establish the next estimate.
 \par 
@@ -526,7 +556,7 @@ In the same paper, these authors also establish the next estimate.
 
   For $x\ge 2$, we have
 $$
-\sum_{n\le x} d(n)^2 = D_1x(\log x)^3
+\sum_{n\le x} \tau(n)^2 = D_1x(\log x)^3
 + D_2x(\log x)^2
 +D_3x(\log x
 +D_4x
@@ -537,9 +567,9 @@ where the constants $D_1=1/\pi^2$, and $D_2$, $D_3$ and $D_4$
 \end{thm}
 
 They deduce for instance from this that $\sum_{n\le
-x}d(n)^2\le(1/4)x(\log x)^3$ when $x\ge 433$ and that 
+x}\tau(n)^2\le(1/4)x(\log x)^3$ when $x\ge 433$ and that 
 $\sum_{n\le
-x}d(n)^2\le x(\log x)^3$ when $x\ge 7$.
+x}\tau(n)^2\le x(\log x)^3$ when $x\ge 7$.
 
 In
 \cite{Lapkova*16}, we find
@@ -736,7 +766,7 @@ gives an approximate value for $B$.
 
 
   
-\begin{flushright}\small\sl{}   Last updated on December 26th, 2022, by Olivier Ramar\'e
+\begin{flushright}\small\sl{}   Last updated on February 6th, 2024, by Olivier Ramar\'e
  \end{flushright}
 
 
