--- a/Latex/Art18.tex
+++ b/Latex/Art18.tex
@@ -71,6 +71,7 @@ and further refined there in Theorem 1.2.
     \frac{13}{n_K-1}
     \biggr).
     $$
+\end{thm}
 
 
 For $n_K=2$, the constant $\Delta_K$ is about $8.80\cdot 10^{11}$. The
@@ -83,8 +84,7 @@ An approximation not relying on the discriminant but on the regulator
 and the class number has been given in Corollary 2 of
 \cite{Debaene*19}.
 \par 
-Theorem (2019)
-
+\begin{thm}{Theorem (2019)}
 
   The notation being as above, we have
   $$
