--- a/Biblio/Local-TME-EMT.bib
+++ b/Biblio/Local-TME-EMT.bib
@@ -19002,7 +19002,21 @@ MRREVIEWER = {M. I. Israilov},
   Pages                    = {1-27},
   Volume                   = {14}
 }
-
+@article {Mossinghoff-Starichkova-Trudgian*22,
+    AUTHOR = {Mossinghoff, Michael J. and Starichkova, Valeriia V. and
+              Trudgian, Timothy S.},
+     TITLE = {Explicit lower bounds on {$|L (1, \chi)|$}},
+   JOURNAL = {J. Number Theory},
+  FJOURNAL = {Journal of Number Theory},
+    VOLUME = {240},
+      YEAR = {2022},
+     PAGES = {641--655},
+      ISSN = {0022-314X,1096-1658},
+   MRCLASS = {11M20 (11Y35 42A05)},
+  MRNUMBER = {4458254},
+MRREVIEWER = {Yannick\ Saouter},
+       DOI = {10.1016/j.jnt.2021.12.013},
+}
 @Article{Stechkin*89,
   Title                    = {Rational inequalities and zeros of the {R}iemann zeta-function},
   Author                   = {S.B. Stechkin},
