--- a/Biblio/biblio.tex
+++ b/Biblio/biblio.tex
@@ -102,6 +102,7 @@
 \nocite{Louboutin*98}
 \nocite{Louboutin*13}
 \nocite{Louboutin*15}
+\nocite{Mossinghoff-Starichkova-Trudgian*22}
 \nocite{Lune-Riele-Winter*86}
 \nocite{Platt*11}
 \nocite{Platt*17}
