--- a/Latex/Art07.tex
+++ b/Latex/Art07.tex
@@ -38,6 +38,15 @@ we have $|L(1,\chi)|\ge 1/ ( 10\log(f/\pi))$.
 \end{thm}
 
 
+This is improved in
+\cite{Mossinghoff-Starichkova-Trudgian*22}
+where we find the next bound.
+\begin{thm}{Theorem (2022)}
+
+For any non-quadratic primitive Dirichlet character $\chi$ of conductor $f$,
+we have $|L(1,\chi)|\ge 1/ ( 9.69030\log(f/\pi))$.
+\end{thm}
+
 
 
 
