--- a/Biblio/biblio.tex
+++ b/Biblio/biblio.tex
@@ -95,11 +95,16 @@
 \nocite{Moree*12}
 \nocite{Louboutin*93}
 \nocite{Louboutin*96}
+\nocite{Louboutin*98}
 \nocite{Granville-Soundararajan*02}
 \nocite{Granville-Soundararajan*04}
 \nocite{Ramare*01}
+\nocite{Louboutin*02}
 \nocite{Ramare*02-??}
-\nocite{Louboutin*98}
+\nocite{Louboutin*18}
+\nocite{Platt-Eddin*13}
+\nocite{SaadEddin*16}
+\nocite{Johnston-Ramare-Trudgian*23}
 \nocite{Louboutin*13}
 \nocite{Louboutin*15}
 \nocite{Mossinghoff-Starichkova-Trudgian*22}
