--- a/Latex/Art07.tex
+++ b/Latex/Art07.tex
@@ -18,11 +18,103 @@ Collecting references:
 
 
 \cite{Louboutin*96},
+\cite{Louboutin*98},
 \cite{Granville-Soundararajan*02},
 \cite{Granville-Soundararajan*04}.
 \cite{Ramare*01},
-\cite{Ramare*02-??},
-\cite{Louboutin*98},
+
+
+\begin{thm}{Theorem (2001)}
+
+For any primitive Dirichlet character $\chi$ of conductor $q$,
+we have
+$$
+|L(1,\chi)|\le\tfrac12\log q
++
+\begin{cases}
+0&\text{when $\chi$ is even (i.e. $\chi(-1)=1$),}
+\tfrac52-\log 6&\text{when $\chi$ is odd (i.e. $\chi(-1)=-1$).}
+\end{cases}
+$$
+\end{thm}
+
+
+When the conductor $q$ is even, this may be improved.
+\begin{thm}{Theorem (2001)}
+
+For any primitive Dirichlet character $\chi$ of even conductor $q$,
+we have
+$$
+|L(1,\chi)|\le\tfrac14\log q
++
+\begin{cases}
+\tfrac12\log 2&\text{when $\chi$ is even (i.e. $\chi(-1)=1$),}
+\tfrac54-\tfrac12\log 3&\text{when $\chi$ is odd (i.e. $\chi(-1)=-1$).}
+\end{cases}
+$$
+\end{thm}
+
+
+Similar bounds or more precise bounds may be found in
+\cite{Louboutin*02},
+in
+\cite{Ramare*02-??}
+and in
+\cite{Louboutin*18},
+\par 
+In
+\cite{Platt-Eddin*13},
+we find the next result.
+\begin{thm}{Theorem (2013)}
+
+For any primitive Dirichlet character $\chi$ of conductor $q$
+divisible by 3,
+we have
+$$
+|L(1,\chi)|\le\tfrac13\log q
++
+\begin{cases}
+0.368296&\text{when $\chi$ is even (i.e. $\chi(-1)=1$),}
+0.838374&\text{when $\chi$ is odd (i.e. $\chi(-1)=-1$).}
+\end{cases}
+$$
+\end{thm}
+
+In
+\cite{SaadEddin*16},
+we find improvement on the $(1/2)\log q$ bound in a very special (and
+difficult) case.
+\begin{thm}{Theorem (2016)}
+
+For any primitive Dirichlet even character $\chi$ of conductor $q$,
+we have
+$ |L(1,\chi)|\le\tfrac12\log q - 0.02012 $.
+\end{thm}
+
+
+
+The general upper bounds are improved in
+\cite{Johnston-Ramare-Trudgian*23}
+as follows.
+
+\begin{thm}{Theorem (2023)}
+
+For any quadratic primitive Dirichlet character $\chi$ of conductor
+$f\ge 10^{23}$,
+we have $|L(1,\chi)|\le (1/ 2) \log f$. 
+\end{thm}
+
+
+\begin{thm}{Theorem (2023)}
+
+For any quadratic primitive Dirichlet character $\chi$ of conductor
+$f\ge 5\cdot 10^{50}$,
+we have $|L(1,\chi)|\le (9/ 20) \log f$. When $f$ is even, the lower
+bound on $f$ may be improved to $f\ge 2\cdot 10^{49}$.
+\end{thm}
+
+
+
 
 \section{Lower bounds for $|L(1,\chi)|$}
 
@@ -61,7 +153,7 @@ we have $|L(1,\chi)|\ge 1/ ( 9.69030\log(f/\pi))$.
 
 
   
-\begin{flushright}\small\sl{}   Last updated on September 11th, 2014, by Olivier Ramar\'e
+\begin{flushright}\small\sl{}   Last updated on February 7th, 2024, by Olivier Ramar\'e
  \end{flushright}
 
 
