--- a/GlobalBiblioFile/Global.bib
+++ b/GlobalBiblioFile/Global.bib
@@ -7503,7 +7503,22 @@ MRREVIEWER = {Ayyadurai Sankaranarayanan},
   File                     = {:/home/ramare/tex/Other/Dusart/DusartThese.pdf:PDF}
 }
 
-
+@article {SaadEddin*16,
+    AUTHOR = {Saad Eddin, Sumaia},
+     TITLE = {An explicit upper bound for {$|L(1,\chi)|$} when {$\chi(2)=1$}
+              and {$\chi$} is even},
+   JOURNAL = {Int. J. Number Theory},
+  FJOURNAL = {International Journal of Number Theory},
+    VOLUME = {12},
+      YEAR = {2016},
+    NUMBER = {8},
+     PAGES = {2299--2315},
+      ISSN = {1793-0421,1793-7310},
+   MRCLASS = {11M06 (11M20)},
+  MRNUMBER = {3562027},
+MRREVIEWER = {Mehdi\ Hassani},
+       DOI = {10.1142/S1793042116501372},
+}
 
 @Article{SaadEddin*15,
   author =       {S.~Saad Eddin},
@@ -12174,7 +12189,21 @@ MRREVIEWER = {S. L. Segal},
   Mrnumber                 = {1223084 (94f:11095)},
   Mrreviewer               = {G. Greaves}
 }
-
+@article {Johnston-Ramare-Trudgian*23,
+    AUTHOR = {Johnston, D. R. and Ramar\'{e}, O. and Trudgian, T.},
+     TITLE = {An explicit upper bound for {$L(1,\chi)$} when {$\chi$} is
+              quadratic},
+   JOURNAL = {Res. Number Theory},
+  FJOURNAL = {Research in Number Theory},
+    VOLUME = {9},
+      YEAR = {2023},
+    NUMBER = {4},
+     PAGES = {Paper No. 72, 20},
+      ISSN = {2522-0160,2363-9555},
+   MRCLASS = {11M20},
+  MRNUMBER = {4649452},
+       DOI = {10.1007/s40993-023-00476-4},
+}
 @article {Johnston-Yang*23,
     AUTHOR = {Johnston, Daniel R. and Yang, Andrew},
      TITLE = {Some explicit estimates for the error term in the prime number
@@ -14176,7 +14205,23 @@ MRREVIEWER = {Soun-Hi Kwon},
    MRCLASS = {11L20 (11L07 11N13)},
   MRNUMBER = {4324091},
        DOI = {10.4213/tm4191},
-}	
+}
+@article {Louboutin*18,
+    AUTHOR = {Louboutin, St\'{e}phane R.},
+     TITLE = {Upper bounds on {$L(1,\chi)$} taking into account a finite set
+              of prime ideals},
+   JOURNAL = {Acta Arith.},
+  FJOURNAL = {Acta Arithmetica},
+    VOLUME = {182},
+      YEAR = {2018},
+    NUMBER = {3},
+     PAGES = {249--269},
+      ISSN = {0065-1036,1730-6264},
+   MRCLASS = {11R42 (11M20 11R29)},
+  MRNUMBER = {3763077},
+MRREVIEWER = {Soun-Hi\ Kwon},
+       DOI = {10.4064/aa170426-23-10},
+}
 @Article{Louboutin*13,
   Title                    = {An explicit lower bound on moduli of {D}ichlet {$L$}-functions at $s=1$},
   Author                   = {S. Louboutin},
@@ -14223,7 +14268,22 @@ MRREVIEWER = {Soun-Hi Kwon},
   Mrreviewer               = {Ken Yamamura},
   Url                      = {http://dx.doi.org/10.1090/S0002-9947-03-03313-0}
 }
-
+@article {Louboutin*02,
+    AUTHOR = {Louboutin, St\'{e}phane},
+     TITLE = {Explicit upper bounds for {$|L(1,\chi)|$} for primitive even
+              {D}irichlet characters},
+   JOURNAL = {Acta Arith.},
+  FJOURNAL = {Acta Arithmetica},
+    VOLUME = {101},
+      YEAR = {2002},
+    NUMBER = {1},
+     PAGES = {1--18},
+      ISSN = {0065-1036,1730-6264},
+   MRCLASS = {11M20 (11R29 11R42)},
+  MRNUMBER = {1879841},
+MRREVIEWER = {Don\ Redmond},
+       DOI = {10.4064/aa101-1-1},
+}
 @Article{Louboutin*02,
   Title                    = {Communication priv\'ee},
   Author                   = {S. Louboutin},
@@ -16382,7 +16442,21 @@ MRREVIEWER = {D. R. Heath-Brown},
   Volume                   = {31}
 }
 
-
+@article {Platt-Eddin*13,
+    AUTHOR = {Platt, David J. and Eddin, Sumaia Saad},
+     TITLE = {Explicit upper bounds for {$|L(1,\chi)|$} when {$\chi(3)=0$}},
+   JOURNAL = {Colloq. Math.},
+  FJOURNAL = {Colloquium Mathematicum},
+    VOLUME = {133},
+      YEAR = {2013},
+    NUMBER = {1},
+     PAGES = {23--34},
+      ISSN = {0010-1354,1730-6302},
+   MRCLASS = {11M06 (11Y35)},
+  MRNUMBER = {3139413},
+MRREVIEWER = {Mehdi\ Hassani},
+       DOI = {10.4064/cm133-1-2},
+}
 
 @Article{Platt-Trudgian*21,
   author = 	 {Platt, D. and Trudgian, T.},
