--- a/Latex/Art07.tex
+++ b/Latex/Art07.tex
@@ -32,7 +32,7 @@ $$
 |L(1,\chi)|\le\tfrac12\log q
 +
 \begin{cases}
-0&\text{when $\chi$ is even (i.e. $\chi(-1)=1$),}
+0&\text{when $\chi$ is even (i.e. $\chi(-1)=1$),}\\
 \tfrac52-\log 6&\text{when $\chi$ is odd (i.e. $\chi(-1)=-1$).}
 \end{cases}
 $$
@@ -48,7 +48,7 @@ $$
 |L(1,\chi)|\le\tfrac14\log q
 +
 \begin{cases}
-\tfrac12\log 2&\text{when $\chi$ is even (i.e. $\chi(-1)=1$),}
+\tfrac12\log 2&\text{when $\chi$ is even (i.e. $\chi(-1)=1$),}\\
 \tfrac54-\tfrac12\log 3&\text{when $\chi$ is odd (i.e. $\chi(-1)=-1$).}
 \end{cases}
 $$
@@ -74,7 +74,7 @@ $$
 |L(1,\chi)|\le\tfrac13\log q
 +
 \begin{cases}
-0.368296&\text{when $\chi$ is even (i.e. $\chi(-1)=1$),}
+0.368296&\text{when $\chi$ is even (i.e. $\chi(-1)=1$),}\\
 0.838374&\text{when $\chi$ is odd (i.e. $\chi(-1)=-1$).}
 \end{cases}
 $$
