--- a/Latex/Art07.tex
+++ b/Latex/Art07.tex
@@ -100,7 +100,7 @@ as follows.
 \begin{thm}{Theorem (2023)}
 
 For any quadratic primitive Dirichlet character $\chi$ of conductor
-$f\ge 10^{23}$,
+$f\ge 2\cdot 10^{23}$,
 we have $|L(1,\chi)|\le (1/ 2) \log f$. 
 \end{thm}
 
