--- a/Biblio/biblio.tex
+++ b/Biblio/biblio.tex
@@ -229,6 +229,8 @@
 \nocite{Gallagher*70}
 \nocite{Montgomery-Vaughan*74}
 \nocite{Montgomery-Vaughan*73}
+\nocite{Montgomery-Vaughan*74}
+\nocite{Preissmann*84}
 \nocite{Dusart*98}
 \nocite{Dusart*07}
 \nocite{Rosser-Schoenfeld*62}
