--- a/Latex/Art16.tex
+++ b/Latex/Art16.tex
@@ -24,9 +24,11 @@ and
 
 Let $M$ and $N\ge 1$ be two real numbers. Let $X$ be a set of points of
 $[0,1)$ such that 
-$$
-\min_{x,y\in X}\min_{k\in\mathbb{Z}}|x-y+k|\ge \delta>0.
-$$
+$
+\displaystyle
+\min_{\substack{x,y\in X\\ x\neq y}}
+\min_{k\in\mathbb{Z}}|x-y+k|\ge \delta>0.
+$
 Then, for any sequence of complex numbers $(a_n)_{M < n\le M+N}$, we have
 $$
 \sum_{x\in X}\left|
@@ -51,7 +53,43 @@ $$
 $$
 \end{thm}
 
-The summation over $a$ runs over all invertible classes $a$ modulo $q$.
+The summation over $a$ runs over all invertible (also called reduced)
+classes $a$ modulo $q$.
+
+The weighted large sieve inequality from Theorem 1 in
+\cite{Montgomery-Vaughan*74}
+reads as follows.
+\par 
+\begin{thm}{Theorem (1974)}
+
+Let $M$ and $N\ge 1$ be two real numbers. Let $X$ be a set of points of
+$[0,1)$. Define
+$
+\displaystyle
+\delta(x)=\min_{\substack{y\in X\\ y\neq x}}
+\min_{k\in\mathbb{Z}}|x-y+k|.
+$
+Then, for any sequence of complex numbers $(a_n)_{M < n\le M+N}$, we have
+$$
+\sum_{x\in X}\left|
+\bigl(N+c\delta(x)^{-1}\bigr)\sum_{M < n\le M+N} a_n \exp(2i\pi nx)
+\right|^2
+\le \sum_{M < n\le M+N}|a_n|^2
+	      $$
+	      for $c=3/2$.
+\end{thm}
+
+It is expected that one can reduce the constant $c=3/2$ to 1. In this
+direction, we find in
+\cite{Preissmann*84}
+the next result.
+\par 
+\begin{thm}{Theorem (1984)}
+
+We may take $\displaystyle c= \sqrt{1+\tfrac23\sqrt{\tfrac65}} =
+1.3154\cdots < 4/3$ in the previous theorem.
+\end{thm}
+
 
 
  
@@ -65,7 +103,7 @@ The summation over $a$ runs over all invertible classes $a$ modulo $q$.
 
 
   
-\begin{flushright}\small\sl{}   Last updated on July 14th, 2013, by Olivier Ramar\'e
+\begin{flushright}\small\sl{}   Last updated on February 7th, 2024, by Olivier Ramar\'e
  \end{flushright}
 
 
