--- a/Biblio/Local-TME-EMT.bib
+++ b/Biblio/Local-TME-EMT.bib
@@ -12,6 +12,20 @@
    MRCLASS = {11N25},
   MRNUMBER = {4390731},
 }
+@article {Yangjit*23,
+    AUTHOR = {Yangjit, Wijit},
+     TITLE = {On the {M}ontgomery--{V}aughan weighted generalization of
+              {H}ilbert's inequality},
+   JOURNAL = {Proc. Amer. Math. Soc. Ser. B},
+  FJOURNAL = {Proceedings of the American Mathematical Society. Series B},
+    VOLUME = {10},
+      YEAR = {2023},
+     PAGES = {439--454},
+      ISSN = {2330-1511},
+   MRCLASS = {26D15 (15A42 26D05)},
+  MRNUMBER = {4679863},
+       DOI = {10.1090/bproc/199}
+}
 @article {Patel*22,
     AUTHOR = {Patel, Dhir},
      TITLE = {An explicit upper bound for {$|\zeta (1+it) |$}},
