--- a/Biblio/biblio.tex
+++ b/Biblio/biblio.tex
@@ -231,6 +231,7 @@
 \nocite{Montgomery-Vaughan*73}
 \nocite{Montgomery-Vaughan*74}
 \nocite{Preissmann*84}
+\nocite{Yangjit*23}
 \nocite{Dusart*98}
 \nocite{Dusart*07}
 \nocite{Rosser-Schoenfeld*62}
