--- a/Latex/Art16.tex
+++ b/Latex/Art16.tex
@@ -91,6 +91,10 @@ We may take $\displaystyle c= \sqrt{1+\tfrac23\sqrt{\tfrac65}} =
 \end{thm}
 
 
+See
+\cite{Yangjit*23}
+for a discussion on this topic.
+
 
  
  
