--- a/Biblio/Local-TME-EMT.bib
+++ b/Biblio/Local-TME-EMT.bib
@@ -7837,7 +7837,68 @@ MRREVIEWER = {Vsevolod F. Lev},
   MRNUMBER = {3448979},
 MRREVIEWER = {Kevin J. McGown},
        DOI = {10.1007/s11139-014-9656-6},
-       URL = {http://dx.doi.org/10.1007/s11139-014-9656-6},
+}
+@article {McGown-Trevino-Trudgian*16,
+    AUTHOR = {McGown, Kevin and Trevi\~{n}o, Enrique and Trudgian, Tim},
+     TITLE = {Resolving {G}rosswald's conjecture on {GRH}},
+   JOURNAL = {Funct. Approx. Comment. Math.},
+  FJOURNAL = {Uniwersytet im. Adama Mickiewicza w Poznaniu. Wydzia\l
+              Matematyki i Informatyki. Functiones et Approximatio
+              Commentarii Mathematici},
+    VOLUME = {55},
+      YEAR = {2016},
+    NUMBER = {2},
+     PAGES = {215--225},
+      ISSN = {0208-6573,2080-9433},
+   MRCLASS = {11L40 (11M26)},
+  MRNUMBER = {3584569},
+MRREVIEWER = {Sandro\ Bettin},
+       DOI = {10.7169/facm/2016.55.2.5}
+}
+@article {Chen*22,
+    AUTHOR = {Chen, Bo},
+     TITLE = {Explicit upper bound on the least primitive root modulo
+              {$p^2$}},
+   JOURNAL = {Int. J. Number Theory},
+  FJOURNAL = {International Journal of Number Theory},
+    VOLUME = {18},
+      YEAR = {2022},
+    NUMBER = {2},
+     PAGES = {389--395},
+      ISSN = {1793-0421,1793-7310},
+   MRCLASS = {11A07 (11L40)},
+  MRNUMBER = {4390666},
+MRREVIEWER = {Timothy\ S.\ Trudgian},
+       DOI = {10.1142/S1793042122500233},
+}
+@article {Kerr-McGown-Trudgian*20,
+    AUTHOR = {Kerr, Bryce and McGown, Kevin J. and Trudgian, Tim},
+     TITLE = {The least primitive root modulo {$p^2$}},
+   JOURNAL = {J. Number Theory},
+  FJOURNAL = {Journal of Number Theory},
+    VOLUME = {215},
+      YEAR = {2020},
+     PAGES = {20--27},
+      ISSN = {0022-314X,1096-1658},
+   MRCLASS = {11L40 (11A07)},
+  MRNUMBER = {4125902},
+MRREVIEWER = {Shuguang\ Li},
+       DOI = {10.1016/j.jnt.2020.01.002}
+}
+@article {McGown-Trudgian*20,
+    AUTHOR = {McGown, Kevin J. and Trudgian, Tim},
+     TITLE = {Explicit upper bounds on the least primitive root},
+   JOURNAL = {Proc. Amer. Math. Soc.},
+  FJOURNAL = {Proceedings of the American Mathematical Society},
+    VOLUME = {148},
+      YEAR = {2020},
+    NUMBER = {3},
+     PAGES = {1049--1061},
+      ISSN = {0002-9939,1088-6826},
+   MRCLASS = {11A07 (11L40)},
+  MRNUMBER = {4055934},
+MRREVIEWER = {Shuguang\ Li},
+       DOI = {10.1090/proc/14800}
 }
 @Article{Elsholtz*04,
   Title                    = {Upper bounds for prime $k$-tuples of size $\log N$ and oscillations},
