--- a/Biblio/biblio.tex
+++ b/Biblio/biblio.tex
@@ -227,6 +227,10 @@
 \nocite{Ramare*13d}
 \nocite{Ramare*13d}
 \nocite{Gallagher*70}
+\nocite{McGown-Trudgian*20}
+\nocite{McGown-Trevino-Trudgian*16}
+\nocite{Kerr-McGown-Trudgian*20}
+\nocite{Chen*22}
 \nocite{Montgomery-Vaughan*74}
 \nocite{Montgomery-Vaughan*73}
 \nocite{Montgomery-Vaughan*74}
