--- a/Latex/Art19.tex
+++ b/Latex/Art19.tex
@@ -15,13 +15,49 @@ Corresponding html file: \texttt{../Articles/Art19.html}
  
 
 
+As a  consequence of
+\cite{McGown-Trudgian*20},
+we find the next result.
+\par 
+\begin{thm}{Theorem (2020)}
+
+    The least primitive root $g(p)$ modulo the prime $p$ satisfies
+    $g(p)\le p^{5/8}$ when $p\ge 10^{22}$ and $g(p) < \sqrt{p}-2$ when
+    $p\ge 10^{56}$.
+\end{thm}
+
+From
+\cite{McGown-Trevino-Trudgian*16},
+we also have:
+\par 
+\begin{thm}{Theorem (2016)}
+
+    Under GRH, the least primitive root $g(p)$ modulo the prime $p$ satisfies
+    $g(p)  409$.
+\end{thm}
+
+
+Similar investigations concerning primivite roots modulo $p^2$ are led
+in
+\cite{Kerr-McGown-Trudgian*20}
+and in
+\cite{Chen*22}
+where the next theorem is proved.
+\par 
+\begin{thm}{Theorem (2022)}
+
+    The least primitive root $h(p)$ modulo $p^2$ satisfies
+    $h(p)\le p^{0.74}$ for all $p \ge 2$.
+\end{thm}
+
+
 
 
 
 
 
   
-\begin{flushright}\small\sl{}   Last updated on July 14th, 2012, by Olivier Ramar\'e
+\begin{flushright}\small\sl{}   Last updated on February 7th, 2024, by Olivier Ramar\'e
  \end{flushright}
 
 
