--- a/Latex/Local-TME-EMT.bib
+++ b/Latex/Local-TME-EMT.bib
@@ -2190,7 +2190,6 @@ MRREVIEWER = {B. S. Mitjagin},
    MRCLASS = {Contributed Item},
   MRNUMBER = {1554993},
        DOI = {10.1007/BF02421317},
-       URL = {http://dx.doi.org/10.1007/BF02421317},
 }
 
 @article {McGown*12,
@@ -2207,7 +2206,6 @@ MRREVIEWER = {B. S. Mitjagin},
   MRNUMBER = {2887892},
 MRREVIEWER = {Jurgen Ritter},
        DOI = {10.1142/S1793042112500133},
-       URL = {http://dx.doi.org/10.1142/S1793042112500133},
 }
 
 @book {Cochran*72,
@@ -7853,7 +7851,7 @@ MRREVIEWER = {Kevin J. McGown},
    MRCLASS = {11L40 (11M26)},
   MRNUMBER = {3584569},
 MRREVIEWER = {Sandro\ Bettin},
-       DOI = {10.7169/facm/2016.55.2.5}
+       DOI = {10.7169/facm/2016.55.2.5},
 }
 @article {Chen*22,
     AUTHOR = {Chen, Bo},
@@ -7883,7 +7881,7 @@ MRREVIEWER = {Timothy\ S.\ Trudgian},
    MRCLASS = {11L40 (11A07)},
   MRNUMBER = {4125902},
 MRREVIEWER = {Shuguang\ Li},
-       DOI = {10.1016/j.jnt.2020.01.002}
+       DOI = {10.1016/j.jnt.2020.01.002},
 }
 @article {McGown-Trudgian*20,
     AUTHOR = {McGown, Kevin J. and Trudgian, Tim},
@@ -7898,7 +7896,7 @@ MRREVIEWER = {Shuguang\ Li},
    MRCLASS = {11A07 (11L40)},
   MRNUMBER = {4055934},
 MRREVIEWER = {Shuguang\ Li},
-       DOI = {10.1090/proc/14800}
+       DOI = {10.1090/proc/14800},
 }
 @Article{Elsholtz*04,
   Title                    = {Upper bounds for prime $k$-tuples of size $\log N$ and oscillations},
