--- a/Biblio/Local-TME-EMT.bib
+++ b/Biblio/Local-TME-EMT.bib
@@ -11223,6 +11223,21 @@ MRREVIEWER = {S. W. Graham},
   year={2021}
 
 }
+@article {CullyHugill-Lee*24,
+    AUTHOR = {Cully-Hugill, Michaela and Lee, Ethan S.},
+     TITLE = {Corrigendum to `{E}xplicit interval estimates for prime
+              numbers'},
+   JOURNAL = {Math. Comp.},
+  FJOURNAL = {Mathematics of Computation},
+    VOLUME = {93},
+      YEAR = {2024},
+    NUMBER = {346},
+     PAGES = {1019--1025},
+      ISSN = {0025-5718,1088-6842},
+   MRCLASS = {11Y35 (11M06 11M26 11N05)},
+  MRNUMBER = {4678592},
+       DOI = {10.1090/mcom/3884},
+}
 @article {Cully-Trudgian*21,
     AUTHOR = {Cully-Hugill, Michaela and Trudgian, Tim},
      TITLE = {Two explicit divisor sums},
