--- a/Latex/Art09.tex
+++ b/Latex/Art09.tex
@@ -162,6 +162,36 @@ to $10^{15}$ in
 result of
 \cite{Young-Potler*89}.
 
+The above theorem is improved in
+\cite{Kadiri-Lumley*14}.
+We find in particular the next result.
+
+\begin{thm}{Theorem (2014)}
+
+Let $x$ be a real number larger than $\exp(60)$. Then the interval
+$$
+\Bigl] x \Bigl(1-\frac1{1\,966\,196\,911}\Bigr),x \Bigr]
+$$
+contains at least one prime.
+\end{thm}
+
+
+This is further improved in
+\cite{CullyHugill-Lee*24}.
+We find in particular the next result.
+
+\begin{thm}{Theorem (2024)}
+
+Let $x$ be a real number larger than $\exp(60)$. Then the interval
+$$
+\Bigl] x \Bigl(1-\frac1{....}\Bigr),x \Bigr]
+$$
+contains at least one prime.
+\end{thm}
+
+
+
+\par \par 
 In
 \cite{Trudgian*16},
 we find
