--- a/Latex/Art09.tex
+++ b/Latex/Art09.tex
@@ -116,7 +116,7 @@ the value $T_0=3.3 \cdot 10^{9}$ and obtained the following.
 
 Let $x$ be a real number larger than $10\,726\,905\,041$. Then the interval
 $$
-\Bigl] x \Bigl(1-\frac1{28\,314\,000}\Bigr),x \Bigr]
+\Bigl( x \Bigl(1-\frac1{28\,314\,000}\Bigr),x \Bigr]
 $$
 contains at least one prime.
 \end{thm}
@@ -132,7 +132,7 @@ contains the following.
 
 Let $x$ be a real number larger than $\exp(53)$. Then the interval
 $$
-\Bigl] x \Bigl(1-\frac1{204\,879\,661}\Bigr),x \Bigr]
+\Bigl( x \Bigl(1-\frac1{204\,879\,661}\Bigr),x \Bigr]
 $$
 contains at least one prime.
 \end{thm}
@@ -150,7 +150,7 @@ that
 
 Let $x$ be a real number larger than $\exp(60)$. Then the interval
 $$
-\Bigl] x \Bigl(1-\frac1{14\,500\,755\,538}\Bigr),x \Bigr]
+\Bigl( x \Bigl(1-\frac1{14\,500\,755\,538}\Bigr),x \Bigr]
 $$
 contains at least one prime.
 \end{thm}
@@ -170,7 +170,7 @@ We find in particular the next result.
 
 Let $x$ be a real number larger than $\exp(60)$. Then the interval
 $$
-\Bigl] x \Bigl(1-\frac1{1\,966\,196\,911}\Bigr),x \Bigr]
+\Bigl( x \Bigl(1-\frac1{1\,966\,196\,911}\Bigr),x \Bigr]
 $$
 contains at least one prime.
 \end{thm}
@@ -184,7 +184,7 @@ We find in particular the next result.
 
 Let $x$ be a real number larger than $\exp(60)$. Then the interval
 $$
-\Bigl] x \Bigl(1-\frac1{....}\Bigr),x \Bigr]
+\Bigl( x \Bigl(1-\frac1{....}\Bigr),x \Bigr]
 $$
 contains at least one prime.
 \end{thm}
