--- a/Latex/Local-TME-EMT.bib
+++ b/Latex/Local-TME-EMT.bib
@@ -11221,12 +11221,11 @@ MRREVIEWER = {S. W. Graham},
   author={Cully-Hugill, Michaela},
   journal={arXiv preprint arXiv:2107.14468},
   year={2021}
-
 }
+
 @article {CullyHugill-Lee*24,
     AUTHOR = {Cully-Hugill, Michaela and Lee, Ethan S.},
-     TITLE = {Corrigendum to `{E}xplicit interval estimates for prime
-              numbers'},
+     TITLE = {Corrigendum to `{E}xplicit interval estimates for prime numbers'},
    JOURNAL = {Math. Comp.},
   FJOURNAL = {Mathematics of Computation},
     VOLUME = {93},
@@ -11238,6 +11237,7 @@ MRREVIEWER = {S. W. Graham},
   MRNUMBER = {4678592},
        DOI = {10.1090/mcom/3884},
 }
+
 @article {Cully-Trudgian*21,
     AUTHOR = {Cully-Hugill, Michaela and Trudgian, Tim},
      TITLE = {Two explicit divisor sums},
