--- a/Latex/Art09.tex
+++ b/Latex/Art09.tex
@@ -184,7 +184,7 @@ We find in particular the next result.
 
 Let $x$ be a real number larger than $\exp(60)$. Then the interval
 $$
-\Bigl( x \Bigl(1-\frac1{....}\Bigr),x \Bigr]
+\Bigl( x \Bigl(1-\frac1{76\,900\,000\,000}\Bigr),x \Bigr]
 $$
 contains at least one prime.
 \end{thm}
@@ -353,7 +353,7 @@ Collecting references:
 
 
   
-\begin{flushright}\small\sl{}   Last updated on September 1rst, 2021, by Charles Greathouse.
+\begin{flushright}\small\sl{}   Last updated on April 26th, 2024, by Olivier Ramar\'e.
  \end{flushright}
 
 
