--- a/Latex/Art09.tex
+++ b/Latex/Art09.tex
@@ -20,7 +20,7 @@ Corresponding html file: \texttt{../Articles/Art09.html}
 
 
 
-\section{Interval with primes, without any congruence condition}
+\section{Interval with primes, without congruence condition, saving a constant}
 
 
 
@@ -190,6 +190,8 @@ contains at least one prime.
 \end{thm}
 
 
+\section{Interval with primes, no congruence condition, saving more than a constant}
+
 
 \par \par 
 In
@@ -211,7 +213,7 @@ we find
 
 Let $x$ be a real number larger than $468\,991\,632$. The interval
 $$
-\Bigl[ x, x \Bigl(1+\frac1{5000(\log x)^2}\Bigr),x \Bigr]
+\Bigl[ x, x \Bigl(1+\frac1{5000(\log x)^2}\Bigr) \Bigr]
 $$
 contains at least one prime.
 \par 
