--- a/Latex/Art08.tex
+++ b/Latex/Art08.tex
@@ -202,7 +202,7 @@ theorem is proved.
   no zero in the region:
   $$
     \Re s \ge 1- \frac1{R_2 \log(q \max(1,| \Im s|))}  \quad\text{with}\
-    R_1=5.60. 
+    R_2=5.60. 
   $$
 \end{thm}
 
@@ -220,6 +220,23 @@ shows that
     \quad(|\Im s|\ge 3).
   $$
 \end{thm}
+
+
+A Vinogradov-Korobov zero-free region for Dirchlet $L$-functions has been obtanied in
+\cite{Khale*24}
+
+\begin{thm}{Theorem (2024)}
+
+  The Riemann $\zeta$-function has no zeros in the region
+  $$
+    \Re s\ge  1-\frac{1}{10.5\log q+61.5(\log |\Im s|)^{2/3}(\log\log |\Im s|)^{1/3}}
+    \quad(|\Im s|\ge 10).
+  $$
+\end{thm}
+
+If we are ready to assume $|\Im s|$ large enough, the same proof can reduce the 61.5 to 49.13.
+
+
 
 
 Concerning the Dedekind $\zeta$-function, see
@@ -335,7 +352,7 @@ contains extensive tables concerning zeroes of the Riemann zeta function.
 
 
   
-\begin{flushright}\small\sl{}   Last updated on December 26th, 2022, by Olivier Ramar\'e
+\begin{flushright}\small\sl{}   Last updated on January 8th, 2024, by Olivier Ramar\'e
  \end{flushright}
 
 
